--- a/app/cards.html
+++ b/app/cards.html
@@ -11,6 +11,8 @@
   <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- Link Swiper's CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link href="css/styles.css" rel="stylesheet">
   <link href="css/responsive.css" rel="stylesheet">
   
@@ -41,13 +43,13 @@
                     <p class="txt medium d-none d-lg-inline-block mx-3">Budget</p>
                   </a>
                 </li>
-                <li class="nav-item py-3">
+                <li class="nav-item py-3 active">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/cards.svg" alt="" class="d-inline-block">
                     <p class="txt medium d-none d-lg-inline-block mx-3">Cards</p>
                   </a>
                 </li>
-                <li class="nav-item py-3 active">
+                <li class="nav-item py-3">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/people.svg" alt="" class="d-inline-block">
                     <p class="txt medium d-none d-lg-inline-block mx-3">People</p>
@@ -109,46 +111,162 @@
             <div class="py-md-5 fit-height-listing">
               <div class="row mb-5">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center">
-                  <h1 class="bold">People</h1>
+                  <h1 class="bold">Cards</h1>
                   <div class="btn-toolbar mb-2 mb-md-0">
                     <div class="btn-group me-2">
-                      <a href="javascript:;" class="my-auto">
-                        <img src="images/static/profile-pink.svg" alt="" class="d-inline-block">
-                        <p class="txt pink d-none d-md-inline-block mx-2">Add New User</p>
+                      <a href="javascript:;" class=" btn my-auto">
+                        <img src="images/static/plus-white.svg" alt="" class="d-inline-block">
+                        <p class="txt white d-none d-md-inline-block mx-2">New Card</p>
                       </a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row mb-5">
+                <!-- Swiper -->
+                <div class="swiper-container filter-swiper pt-5">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <div class="grey-box filter h-100">
+                        <p class="txt half-opacity mb-3 text-start">View</p>
+                        <div class="form-check d-inline-block me-4">
+                          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+                          <label class="form-check-label txt medium" for="flexRadioDefault1">
+                            Virtual
+                          </label>
+                        </div>
+                        <div class="form-check d-inline-block">
+                          <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                          <label class="form-check-label txt medium" for="flexRadioDefault2">
+                            Physical
+                          </label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="grey-box filter h-100">
+                        <p class="txt half-opacity mb-3 text-start">Select Department</p>
+                        <div class="dropdown p-relative align-middle">
+                          <button class="txt medium dropdown-toggle no-bg navy p-0" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            All Departments
+                          </button>
+                          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="grey-box filter h-100">
+                        <p class="txt half-opacity mb-3 text-start">Filter by Card holder</p>
+                        <div class="dropdown p-relative align-middle">
+                          <button class="txt medium dropdown-toggle no-bg navy p-0" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                            All Departments
+                          </button>
+                          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="grey-box filter h-100">
+                        <p class="txt half-opacity mb-3 text-start">Select Date Range</p>
+                        <div class="dropdown p-relative align-middle">
+                          <button class="txt medium dropdown-toggle no-bg navy p-0" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                            All Departments
+                          </button>
+                          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="grey-box filter h-100">
+                        <p class="txt half-opacity mb-3 text-start">Select usage</p>
+                        <div class="dropdown p-relative align-middle">
+                          <button class="txt medium dropdown-toggle no-bg navy p-0" type="button" id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
+                            All usage
+                          </button>
+                          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="grey-box filter h-100">
+                        <p class="txt half-opacity mb-3 text-start">Select Cards</p>
+                        <div class="dropdown p-relative align-middle">
+                          <button class="txt medium dropdown-toggle no-bg navy p-0" type="button" id="dropdownMenuButton3" data-bs-toggle="dropdown" aria-expanded="false">
+                            All Cards
+                          </button>
+                          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="grey-box filter h-100">
+                        <p class="txt half-opacity mb-3 text-start">Search</p>
+                        <div class="input-group">
+                          <span class="input-group-text" id="basic-addon1"><img src="images/static/search.svg" alt=""></span>
+                          <input type="text" class="form-control py-0 txt medium navy" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="arrows-wrapper">
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="row mb-5">
                 <div class="col-lg-5">
-                  <div class="grey-box filter mb-2">
+                  <div class="grey-box filter h-100 mb-2">
                     <div class="input-group w-50-fit">
                       <div class="w-20 align-middle align-items-center p-relative half-opacity">
                         <span class="input-group-text me-1" id="basic-addon1"><img src="images/static/dashboard-border.svg" alt=""></span>
                       </div>
-                      <div class="w-80 p-relative align-middle">
-                        <div class="txt half-opacity">Departments:</div>
-                        <select class="form-select txt p-0 no-bg" aria-label="Default select example">
-                          <option selected>Open this select menu</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
+                      <div class="dropdown w-80 p-relative align-middle">
+                        <label for="dropdownMenuButton1" class="form-label mb-0 w-100 txt half-opacity">Department:</label>
+                        <button class="txt dropdown-toggle no-bg navy p-0" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                          All Departments
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
                       </div>
                     </div>
                     <div class="input-group w-50-fit">
                       <div class="w-20 align-middle align-items-center p-relative half-opacity">
                         <span class="input-group-text me-1" id="basic-addon1"><img src="images/static/status.svg" alt=""></span>
                       </div>
-                      <div class="w-80 p-relative align-middle">
-                        <div class="txt half-opacity">Stasuses:</div>
-                        <select class="form-select txt p-0 no-bg" aria-label="Default select example">
-                          <option selected>Open this select menu</option>
-                          <option value="1">One</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                        </select>
+                      <div class="dropdown w-80 p-relative align-middle">
+                        <label for="dropdownMenuButton2" class="form-label mb-0 w-100 txt half-opacity">Department:</label>
+                        <button class="txt dropdown-toggle no-bg navy p-0" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                          All Statuses
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
                       </div>
                     </div>
                   </div>
@@ -381,5 +499,20 @@
         </div>
       </div>
     </div>
+    <!-- Swiper JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".filter-swiper", {
+        slidesPerView: "auto",
+        spaceBetween: 30,
+        freeMode: true,
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+    </script>
 </body>
 </html>
