--- a/app/people.html
+++ b/app/people.html
@@ -32,49 +32,49 @@
                 <li class="nav-item py-3">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/dashboard-blue.svg" alt="" class="d-inline-block">
-                    <p class="txt medium d-none d-lg-inline-block mx-3">Dashboard</p>
+                    <p class="txt semi-bold d-none d-lg-inline-block mx-3">Dashboard</p>
                   </a>
                 </li>
                 <li class="nav-item py-3">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/budget.svg" alt="" class="d-inline-block">
-                    <p class="txt medium d-none d-lg-inline-block mx-3">Budget</p>
+                    <p class="txt semi-bold d-none d-lg-inline-block mx-3">Budget</p>
                   </a>
                 </li>
                 <li class="nav-item py-3">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/cards.svg" alt="" class="d-inline-block">
-                    <p class="txt medium d-none d-lg-inline-block mx-3">Cards</p>
+                    <p class="txt semi-bold d-none d-lg-inline-block mx-3">Cards</p>
                   </a>
                 </li>
                 <li class="nav-item py-3 active">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/people.svg" alt="" class="d-inline-block">
-                    <p class="txt medium d-none d-lg-inline-block mx-3">People</p>
+                    <p class="txt semi-bold d-none d-lg-inline-block mx-3">People</p>
                   </a>
                 </li>
                 <li class="nav-item py-3">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/expenses.svg" alt="" class="d-inline-block">
-                    <p class="txt medium d-none d-lg-inline-block mx-3">Expenses</p>
+                    <p class="txt semi-bold d-none d-lg-inline-block mx-3">Expenses</p>
                   </a>
                 </li>
                 <li class="nav-item py-3">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/reports.svg" alt="" class="d-inline-block">
-                    <p class="txt medium d-none d-lg-inline-block mx-3">Report</p>
+                    <p class="txt semi-bold d-none d-lg-inline-block mx-3">Report</p>
                   </a>
                 </li>
                 <li class="nav-item py-3">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/acconting.svg" alt="" class="d-inline-block">
-                    <p class="txt medium d-none d-lg-inline-block mx-3">Accounting </p>
+                    <p class="txt semi-bold d-none d-lg-inline-block mx-3">Accounting </p>
                   </a>
                 </li>
                 <li class="nav-item py-3">
                   <a href="#" class="nav-link half-opacity">
                     <img src="images/static/settings.svg" alt="" class="d-inline-block">
-                    <p class="txt medium d-none d-lg-inline-block mx-3">Settings </p>
+                    <p class="txt semi-bold d-none d-lg-inline-block mx-3">Settings </p>
                   </a>
                 </li>
               </ul>
@@ -214,7 +214,7 @@
                           <div class="btn grey-btn float-end">View</div>
                         </td>
                       </tr>
-                      <tr class="active">
+                      <tr class="">
                         <th scope="row" class="row-name">
                           <div class="p-2">
                             <div class="img-wrapper d-inline-block"><img src="images/dynamic/user-img.jpg" alt=""></div>
