--- a/html/cards-details-expenses.html
+++ b/html/cards-details-expenses.html
@@ -133,7 +133,7 @@
             </ul>
             
 
-            <div class="py-md-5">
+            <div class="py-md-5 fit-height-listing">
               <div class="row mb-5">
                 <div class="col-lg-2 mb-2 mb-lg-0 pe-lg-0">
                   <div class="grey-box filter h-100 py-3">
